--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
         :root {
             --bg-body: #f4f6f9;
             --bg-card: #ffffff;
-            --text-main: #333333;
+            --text-main: #333;
             --text-muted: #6c757d;
             --accent-primary: #4e73df;
             --accent-success: #1cc88a;
@@ -32,23 +32,44 @@
             --accent-warning: #f39c12;
             --accent-info: #3498db;
             --border-color: #2c3e50;
-            --shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+            color-scheme: dark;
         }
 
         body {
             background-color: var(--bg-body);
             color: var(--text-main);
             font-family: 'Inter', sans-serif;
-            transition: background-color 0.3s, color 0.3s;
+            transition: background-color .3s, color .3s;
+        }
+
+        [data-theme="dark"] body,
+        [data-theme="dark"] .card,
+        [data-theme="dark"] .navbar,
+        [data-theme="dark"] .table,
+        [data-theme="dark"] .alert,
+        [data-theme="dark"] .form-label,
+        [data-theme="dark"] .navbar-brand {
+            color: var(--text-main) !important;
+        }
+
+        [data-theme="dark"] .text-muted,
+        [data-theme="dark"] .text-secondary {
+            color: var(--text-muted) !important;
+        }
+
+        [data-theme="dark"] .input-group-text {
+            background-color: var(--bg-card);
+            color: var(--text-main);
+            border-color: var(--border-color);
         }
 
         .navbar {
-            background-color: var(--bg-card);
+            background: var(--bg-card);
             box-shadow: var(--shadow);
         }
 
         .card {
-            background-color: var(--bg-card);
+            background: var(--bg-card);
             border: 1px solid var(--border-color);
             border-radius: 12px;
             box-shadow: var(--shadow);
@@ -83,7 +104,8 @@
         }
 
         .form-control, .form-select {
-            background-color: var(--bg-body);
+            background: var(--bg-body);
+            color: var(--text-main);
             border-color: var(--border-color);
             color: var(--text-main);
         }
@@ -93,6 +115,10 @@
             color: var(--text-main);
             border-color: var(--accent-primary);
             box-shadow: 0 0 0 0.25rem rgba(78, 115, 223, 0.25);
+        }
+
+        .form-control::placeholder {
+            color: var(--text-muted);
         }
 
         /* Анимация появления */
@@ -106,7 +132,9 @@
         }
 
         /* Стилизация таблицы */
-        .table { color: var(--text-main); }
+        .table {
+            color: var(--text-main);
+        }
         .table thead th {
             background-color: var(--bg-body);
             color: var(--text-muted);
@@ -118,7 +146,6 @@
         .theme-switch {
             cursor: pointer;
             font-size: 1.2rem;
-            color: var(--text-main);
         }
     </style>
 </head>
